Fix nav bar underline on hover jump

--- a/index.css
+++ b/index.css
@@ -112,6 +112,7 @@ input[type='search']:focus {
   text-decoration: none;
   color: var(--secondary-color);
   font-weight: 600;
+  border-bottom: 0.25rem solid transparent;
 }
 
 .main-nav a:first-child,
@@ -131,7 +132,7 @@ input[type='search']:focus {
 /* Live Filter */
 .live-filter-container {
   background-color: var(--senary-color);
-  min-height: 9rem;
+  min-height: 8rem;
   padding: 1rem 4rem;
 }
 .live-filer-form {
@@ -188,10 +189,10 @@ button.view-btn {
   flex-direction: row;
   align-items: flex-start;
   margin: 0 4rem;
-  /* padding: 0 4rem; */
   /* max-width: 90%; */
   width: 100%;
-  height: 8.375rem; /*134px*/
+  height: 100%;
+  /* height: 8.375rem; *//*134px*/
   gap: 1rem;
   background: #ffffff;
   margin-top: 2rem;
@@ -199,7 +200,7 @@ button.view-btn {
   flex-wrap: wrap;
   align-items: center;
   justify-content: flex-start;
-  height: 100%;
+
 }
 .status-bar-item {
   width: 14.625rem; /* 18%; 250px*/
@@ -546,6 +547,9 @@ button.view-btn {
   cursor: pointer;
   margin-left: 1rem;
 }
+
+/* Custom scroll bar */
+
 /* -------------------------------------------------------------- */
 
 /* EXTRAAAAAAAAAAAAAA NOT ADDED*/
